kubernetes/base/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-flask-app
  namespace: ns-flask-app
  labels:
    app: app-flask
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: app-flask
