kubernetes/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: ns-flask-app
  labels:
    app: app-nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: app-nginx
